--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">Hodor code</string>
+    <string name="app_name">Free Hodor Keyboard</string>
 
 </resources>
